--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,3 @@
-plugins {
-    id 'groovy'
-    id 'java'
-}
-
 group 'com.github.poulad.jenkins'
 version '1.0-SNAPSHOT'
 
@@ -23,9 +18,16 @@ sourceSets {
             srcDirs = ['vars', 'src']
         }
     }
+
+    test {
+        groovy {
+            srcDirs = ['test']
+        }
+    }
 }
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     maven { url 'http://repo.jenkins-ci.org/releases/' }
@@ -33,14 +35,13 @@ repositories {
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    compile 'org.codehaus.groovy:groovy-all:2.4.8'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.jenkins-ci.main:jenkins-core:2.23'
 
     // Jenkins plugins
     compile group: 'org.jenkins-ci.plugins', name: 'credentials', version: '2.1.13', ext: 'jar'
-    compile group: 'org.jenkins-ci.plugins', name: 'matrix-auth', version: '1.6', ext: 'jar'
-    compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-cps', version: '2.39', ext: 'jar'
+    compile group: 'org.jenkins-ci.plugins', name: 'credentials-binding', version: '1.13', ext: 'jar'
     compile group: 'org.apache.maven', name: 'maven-model', version: '3.3.9'
 
     testCompile group: 'com.lesfurets', name: 'jenkins-pipeline-unit', version: '1.1'
