--- a/build.gradle
+++ b/build.gradle
@@ -6,48 +6,64 @@ apply plugin: 'java'
 apply plugin: 'idea'
 
 idea {
-    module {
-        downloadJavadoc = true
-        downloadSources = true
-    }
+   module {
+      downloadJavadoc = true
+      downloadSources = true
+   }
 }
 
 sourceSets {
-    main {
-        groovy {
-            srcDirs = ['vars', 'src']
-        }
-    }
+   main {
+      groovy {
+         srcDirs = ['vars', 'src']
+      }
+   }
 
-    test {
-        groovy {
-            srcDirs = ['test']
-        }
-    }
+   test {
+      groovy {
+         srcDirs = ['test']
+      }
+   }
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-    maven { url 'http://repo.jenkins-ci.org/releases/' }
-    mavenCentral()
+   maven { url 'http://repo.jenkins-ci.org/releases/' }
+   mavenCentral()
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.4.8'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'org.jenkins-ci.main:jenkins-core:2.23'
+   compile 'org.codehaus.groovy:groovy-all:2.4.8'
 
-    // Jenkins plugins
-    compile group: 'org.jenkins-ci.plugins', name: 'credentials', version: '2.1.13', ext: 'jar'
-    compile group: 'org.jenkins-ci.plugins', name: 'credentials-binding', version: '1.13', ext: 'jar'
-    compile group: 'org.apache.maven', name: 'maven-model', version: '3.3.9'
+   compile group: 'org.jenkins-ci.main', name: 'jenkins-core', version: '2.162', ext: 'jar'
 
-    testCompile group: 'com.lesfurets', name: 'jenkins-pipeline-unit', version: '1.1'
-    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
+   testCompile group: 'junit', name: 'junit', version: '4.12'
 
-    // TRICKY: The lib folder contains all other plugins *JAR* files
-    // if not found in Maven
-    compile fileTree(dir: 'lib', include: ['*.jar'])
+   // Jenkins plugins
+   compile group: 'org.jenkins-ci.plugins', name: 'credentials', version: '2.1.13', ext: 'jar'
+   compile group: 'org.jenkins-ci.plugins', name: 'credentials-binding', version: '1.13', ext: 'jar'
+
+  compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-cps', version: '2.63', ext: 'jar'
+  compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-cps-global-lib', version: '2.12', ext: 'jar'
+  compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-api', version: '2.33', ext: 'jar'
+  compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-step-api', version: '2.19', ext: 'jar'
+  compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-basic-steps', version: '2.14', ext: 'jar'
+  compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-support', version: '3.1', ext: 'jar'
+  compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-aggregator', version: '2.5', ext: 'jar'
+  compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-durable-task-step', version: '2.29', ext: 'jar'
+  compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-stm', version: '0.1-beta-3', ext: 'jar'
+  compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-job', version: '2.31', ext: 'jar'
+  compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-pom', version: '1.15', ext: 'jar'
+  compile group: 'org.jenkins-ci.plugins.workflow', name: 'workflow-scm-step', version: '2.7', ext: 'jar'
+
+   compile group: 'org.apache.maven', name: 'maven-model', version: '3.3.9'
+
+   testCompile group: 'com.lesfurets', name: 'jenkins-pipeline-unit', version: '1.1'
+   testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
+
+   // TRICKY: The lib folder contains all other plugins *JAR* files
+   // if not found in Maven
+   compile fileTree(dir: 'lib', include: ['*.jar'])
 }
